test/tests/errors/error-class-proc-body-invalid2.sm
// true
// false
// false
/**/
/**/

program {
    class T {
        private proc a() {
            output a;
        }
    }
}